# computer-language

nexlang/: CMakeLists.txt  main.cpp
nexlang/analyzer/: semantic_analyzer.h
nexlang/builtins/: builtins_registry.h
nexlang/compiler/: CMakeLists.txt
nexlang/compiler/backend/: CMakeLists.txt  codegen.h  llvm_backend.cpp  llvm_backend.h
nexlang/compiler/ir/: CMakeLists.txt  ir_builder.cpp  ir_ops.h
nexlang/docs/: prompt.md
nexlang/driver/: compiler_driver.cpp
nexlang/engine/: block_engine.h
nexlang/example/: MYcode_syntax.nex
nexlang/lexer/: CMakeLists.txt  lexer.cpp  lexer.h
nexlang/parser/: CMakeLists.txt  ast.h  parser.cpp  parser.h
nexlang/perser/: ast.h  parser.cpp  parser.h
nexlang/runtime/: float_ops.cpp  float_ops.h  io.cpp  io.h  string_ops.cpp  string_ops.h  value.h
nexlang/runtime/include/: CMakeLists.txt
nexlang/runtime/include/nexlangrt/: float_ops.h  io.h  string_ops.h  value.h
nexlang/runtime/src/: CMakeLists.txt  float_ops.cpp  io.cpp  string_ops.cpp  value.cpp
nexlang/symbol/: symbol_table.h
nexlang/tests/: CMakeLists.txt  lexer_tests.cpp  parser_tests.cpp  semantic_tests.cpp
nexlang/tests/analyzer/: CMakeLists.txt  semantic_tests.cpp
nexlang/tests/lexer/: CMakeLists.txt  lexer_tests.cpp
nexlang/tests/parser/: CMakeLists.txt  parser_tests.cpp
nexlang/tests/runtime/: CMakeLists.txt  value_tests.cpp
